--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -86,7 +86,8 @@
 	
 <!-- <footer id="contentinfo" > -->
         <!-- <address id="about" class="vcard "> -->
-        <!-- Proudly powered by <a href="http://getpelican.com/" target="_blank">Pelican</a>, which takes -->
+        <!-- Proudly powered by <a href="http://getpelican.com/" target="_blank">Pelican</a> -->
+        <!-- , which takes -->
         <!-- great advantage of <a href="http://python.org" target="_blank">Python</a>.  -->
 
         <!-- </address> <!-- /#about -->
