--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -61,11 +61,11 @@
       <a href="{{ SITEURL }}/">Jens Thang</a>
     </p>
     <p id="user_desc">
-      Maths
+      Data Hacker
       <br>
-      Stats
       <br>
-      Machine Learning
+      <br>
+      Machine Learning : Bayesian : Python
       <br>
       <br>
       <a href="mailto:jensthang[at]gmail.com">Email</a><br />
