--- a/output/theme/css/main.css
+++ b/output/theme/css/main.css
@@ -15,13 +15,13 @@ figure {
   display: block !important;
 }
 
-img {
+/*img {
   display: block !important;
   max-width:700px !important;
   max-height:900px !important;
   width: auto !important;
   height: auto !important;
-}
+}*/
 
 li {
   color: #000 !important;
